# AGoRaS

./: .gitignore  README.md  experiment3_BIGGER_VAE_reactions.py  experiment_VAE_reactions.py  pyproject.toml
Architectures/: AGoRaS_VAE.py  experiment2_VAE_reactions.py  experiment3_BIGGER_VAE_reactions.py  experiment_VAE_reactions.py  upgraded_vae_for_reactions_8_4_20.py  upgraded_vae_for_reactions_8_5_20.py
DataCleaning/: ReadMe.md
DataCleaning/Dataset_raw/: 9_28_20_cleanedwithRDKIT_trainingdata.pkl  Balanced_original_equations_with_coefficents_ellim_12102020.pkl  NIH_conversions_11_18_20.pkl  New_translation_wo_aliases__NIH_112420.pkl  convert_from_smiles2form_rdkit.pkl  original_species_data_101020.pkl
DataCleaning/WorkingWithDatasetsScripts/: Dataset_creation.py  Dataset_creation_formula_from_smiles.py  Dataset_creation_with_smiles_and_species_ranking.py  Dataset_creationaset_to_chemical_formula_for_balancing.py  Dataset_creationation_with_smiles_and_species.py  Dataset_creationment.py  Dataset_creationon.py  balance_function.py  balance_function2.py  (+6 more)
Results/: ReadMe.md  all_eqs_species_transformed_as_of_92820.txt  orig_smiles_balanced.txt  orig_species_balanced.txt
helper_codes/: balance_function.py  gather_all_gen_eqns_eliminate_bad_eqns_and_balance.py  get_infor_for_graphing_dash.py  gibbs_free_energy_calcs_generated_and_orig.py  gibbs_free_energy_calcs_generated_and_orig_V2.py  graphing_gibbs_free_energy.py
models/: AGoRaS_VAE.py  ReadMe.md
src/: create_tokenized_dataset.py  equation_generation.py  loss_functions.py  loss_layers.py  utils.py
(+30 files in other folders)
