[tool.poetry]
name = "AGoRaS_VAE"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.7, <3.9"
keras = "^2.6.0"
numpy = "1.19.5"
tensorflow = "^2.6.0"
tensorflow-addons = "^0.14.0"
scipy = "^1.7.1"
pathlib = "^1.0.1"
ipykernel = "^6.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
